updated navbar on each page to include repsonsive underline using hover.css. fixed burger icon on mobile view so it is centered within the surrounding circle border

--- a/assets/style.css
+++ b/assets/style.css
@@ -51,6 +51,8 @@ img {
     border-radius: 80%;
     height: 50px;
     width: 50px;
+    padding-left: 10px;
+    padding-right: 13px;
 }
 
 .navbar-toggler span {
@@ -73,11 +75,14 @@ img {
 }
 
 .nav-item, .nav-link {
-    align-items: stretch;
     padding-right: 50px;
     font-size: 20px;
     letter-spacing: 3px;
     text-transform: uppercase;
+}
+
+.hvr-underline-from-center::before {
+    background-color: rgba(207, 52, 13, 0.986);
 }
 
 .navbar-nav, .nav-link {
@@ -135,7 +140,6 @@ img {
     margin: auto;
     margin-top: 10px;
     padding: 5px 8px;
-    /* background-color: rgba(0, 48, 73, 0.6);  */
     text-align: center;
     line-height: 30px;
 }
@@ -143,7 +147,6 @@ img {
 #present {
     margin: auto;
     padding: 5px 8px;
-    /* background-color: rgba(0, 48, 73, 0.6);  */
     text-align: center;
     line-height: 30px;
 }
